--- a/index.html
+++ b/index.html
@@ -3,9 +3,53 @@
     <head>
         <meta charset="UTF-8" />
         <title>Run Buddy</title>
-    </head>
-    <body>
-        <h3>RUN BUDDY</h3>
+    </header>
+        <h1>
+          <a href="/"RUN BUDDY</a>
+        </h1>
+        <nav><!-- Unordered list element -->
+          <ul>
+            <!-- List item element-->
+            <li>
+              <!-- Anchor element -->
+              <a href="#what-we-do">What We Do</a>
+            </li>
+            <li>
+              <a href="#what-you-do">What You Do</a>
+            </li>
+            <li>
+              <a href="#your-trainers">Your Trainers</a>
+            </li>
+            <li>
+              <a href="#reach-out">Reach Out</a>
+            </li>
+          </ul></nav>
+    </header>
         What We Do
     </body>
 </html>
+<div>
+    <div>
+      <div>Search</div>
+      <div>
+        <div>John Smith</div>
+        <div>Jane Doe</div>
+      </div>
+    </div>
+    <div>
+      <div>Chat</div>
+      <div>
+        <div>
+          <div>Message 1</div>
+          <div>5:00pm</div>
+        </div>
+        <div>
+          <div>Message 2</div>
+          <div>5:25pm</div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <footer>
+    <h2>❤️ Made with love by Run Buddy.</h2>
+  </footer>
