--- a/index.html
+++ b/index.html
@@ -1,55 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <title>Run Buddy</title>
-    </header>
-        <h1>
-          <a href="/"RUN BUDDY</a>
-        </h1>
-        <nav><!-- Unordered list element -->
-          <ul>
-            <!-- List item element-->
-            <li>
-              <!-- Anchor element -->
-              <a href="#what-we-do">What We Do</a>
-            </li>
-            <li>
-              <a href="#what-you-do">What You Do</a>
-            </li>
-            <li>
-              <a href="#your-trainers">Your Trainers</a>
-            </li>
-            <li>
-              <a href="#reach-out">Reach Out</a>
-            </li>
-          </ul></nav>
-    </header>
-        What We Do
-    </body>
-</html>
-<div>
-    <div>
-      <div>Search</div>
-      <div>
-        <div>John Smith</div>
-        <div>Jane Doe</div>
-      </div>
-    </div>
-    <div>
-      <div>Chat</div>
-      <div>
-        <div>
-          <div>Message 1</div>
-          <div>5:00pm</div>
-        </div>
-        <div>
-          <div>Message 2</div>
-          <div>5:25pm</div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <footer>
-    <h2>❤️ Made with love by Run Buddy.</h2>
-  </footer>
+  <head>
+    <meta charset="UTF-8" />
+    <title>RUN BUDDY</title>
+  </head>
+ <body> 
+   <h1>RUN BUDDY</h1>
+   What We Do
+ </body>
+ </html>
